# TodoList

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
libs/: imgui.cmake  json.cmake
src/: common.hpp  main.cpp
src/files/: File.cpp  File.hpp  FileManager.cpp  FileManager.hpp  Folder.cpp  Folder.hpp
src/renderer/: Renderer.cpp  Renderer.hpp
src/storage/: Storage.cpp  Storage.hpp
src/ui/: UiManager.cpp  UiManager.hpp
src/ui/Lists/: List.cpp  List.hpp  ListsManager.cpp  ListsManager.hpp  Task.hpp
src/ui/widgets/: widgets.cpp  widgets.hpp
